@@ -1,0 +1,2 @@
+This is a short log.
+With only two lines.
